Fixed some issues
- faces don't line up on mobile
- text issue on mobile in Technologies section

--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,7 @@
 }
 
 .imgsForTech {
+  max-width: 100%;
   float: left;
   width:  650px;
   height: 400px;
